# amygdala

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_ja.md  pyproject.toml  requirements.txt  run_mcp.sh  setup_permissions.py
docs/: SAFL_Conversation_Summary.md  amygdala-deferred-gating-design.md  amygdala-relational-graph-proposal.md  auto-context-daemon-design.md  emotion-memory-system-proposal-v0.4.md  phase4_order.md  pta-v1-design.md  relational-graph-design.md  session-hook-auto-recall-design.md  step6-backman-frontman-integration.md  test_scenarios.md  unconscious-backman-memo.md
scripts/: accuracy_report.py  demo.py  export_recall_log.py  init_db.py  label_tool.py  run_labeling.sh
src/: auto_store_hook.py  backman.py  config.py  context_daemon.py  db.py  diversity_watchdog.py  frontman.py  llm_adapter.py  mcp_server.py  memory_system.py  pin_memory.py  reconsolidation.py  relational_graph.py  search_engine.py  session_hook.py  working_memory.py
tests/: conftest.py  test_auto_store_hook.py  test_backman.py  test_config.py  test_context_daemon.py  test_db.py  test_diversity_watchdog.py  test_frontman.py  test_llm_adapter.py  test_mcp_server.py  test_memory_system.py  test_pin_memory.py  test_reconsolidation.py  test_relational_graph.py  test_search_engine.py  test_session_hook.py  test_working_memory.py
